add luke to 1-72

--- a/episodes/1-introduction-and-books.mdx
+++ b/episodes/1-introduction-and-books.mdx
@@ -6,6 +6,7 @@ categories:
 - introduction
 speakers:
 - ethan-carter-edwards
+- jeffrey-luke-watson
 ---
 
 In this episode, Jeffrey (Luke) and Ethan Edwards introduce themselves, they discuss plans for the podcast, and some books that we have been reading. They also give an exclusive sneak peak into our first guest!
