--- a/episodes/10-jason-newman-taxidermy-military-korea-iraq-reintegration-deputy-sheriff-djing.mdx
+++ b/episodes/10-jason-newman-taxidermy-military-korea-iraq-reintegration-deputy-sheriff-djing.mdx
@@ -11,6 +11,7 @@ categories:
 speakers:
 - jason-newman
 - ethan-carter-edwards
+- jeffrey-luke-watson
 ---
 
 In this episode, Ethan and Luke interview Jason Newman. They discuss his time working in Taxidermy, Mr. Newman explains his motivation to enlist, recounts stories from the process, and how training worked while he was in. They then discuss being recalled into service for a year in Iraq and his experiences. Near the end they discuss DJ'ing, his advice for younger generations, and the meaning of life.
