--- a/episodes/12-book-talk-white-nights-by-dostoevsky.mdx
+++ b/episodes/12-book-talk-white-nights-by-dostoevsky.mdx
@@ -10,6 +10,7 @@ categories:
 - talk
 speakers:
 - ethan-carter-edwards
+- jeffrey-luke-watson
 ---
 
 In this episode, Luke and Ethan discuss the book White Nights written by Dostoevsky. They summarize the plot of the book, share the impact it had on them, and discuss their plans for this summer and the future of the podcast. 
