--- a/episodes/16-staff-sergeant-dexter-p-jennings-army-recruiting-artillery-rank-aviation-bmt-ait-contracts.mdx
+++ b/episodes/16-staff-sergeant-dexter-p-jennings-army-recruiting-artillery-rank-aviation-bmt-ait-contracts.mdx
@@ -10,6 +10,7 @@ categories:
 speakers:
 - staff-sergeant-dexter-p-jennings
 - ethan-carter-edwards
+- jeffrey-luke-watson
 ---
 
 In this episode, Ethan and Luke interview Staff Sergeant Dexter P. Jennings. Sergeant Jennings is a member of the active service Army and is currently a recruiter for the Army. He discusses many options for civilians looking to join the Army and the benefits of doing so. He explains the differences between Enlisted, Warrant Officers, and Commissioned Officers. He discusses how civilians are able to guarantee their placement in certain jobs or bases and how the enlistment process works. He gives an overview of what it is like working the Army and why everyone should consider it.
