--- a/episodes/17-book-talk-the-great-gatsby-by-f-scott-fitzgerald.mdx
+++ b/episodes/17-book-talk-the-great-gatsby-by-f-scott-fitzgerald.mdx
@@ -8,6 +8,7 @@ categories:
 - thegreatgatsby
 speakers:
 - ethan-carter-edwards
+- jeffrey-luke-watson
 ---
 
 In this episode, Ethan and Luke discuss The Great Gatsby. They summarize the plot, discuss their opinions, and discuss some relevant cultural topics.
