--- a/episodes/18-book-talk-the-grapes-of-wrath-by-john-steinbeck.mdx
+++ b/episodes/18-book-talk-the-grapes-of-wrath-by-john-steinbeck.mdx
@@ -9,6 +9,7 @@ categories:
 - steinbeck
 speakers:
 - ethan-carter-edwards
+- jeffrey-luke-watson
 ---
 
 In this episode, Ethan and Luke discuss The Grapes of Wrath by Mr. John Steinbeck. They discuss some of the themes in the book and share their thoughts, as well as explaining the first few chapters in detail. 
