--- a/episodes/2-dr-ronnie-collins-faith-family-career-ministry-life-reading-and-running.mdx
+++ b/episodes/2-dr-ronnie-collins-faith-family-career-ministry-life-reading-and-running.mdx
@@ -13,6 +13,7 @@ categories:
 speakers:
 - dr-ronnie-collins
 - ethan-carter-edwards
+- jeffrey-luke-watson
 ---
 
 Jeffrey (Luke) Watson and Ethan Edwards interview Dr. Ronnie Collins, they ask him about his life growing up, his different careers, his education, life as a husband and father, and experience as a runner. His son, Samuel Collins, also features in the episode, discussing his experience running and rodeoing.
