--- a/episodes/21-mark-harmon-sidna-allen-house-historical-society-teaching-history-england-museums-carroll-county.mdx
+++ b/episodes/21-mark-harmon-sidna-allen-house-historical-society-teaching-history-england-museums-carroll-county.mdx
@@ -11,6 +11,7 @@ categories:
 speakers:
 - mark-harmon
 - ethan-carter-edwards
+- jeffrey-luke-watson
 ---
 
 In this episode, Ethan and Luke interview Mr. Mark Harmon. Mr. Harmon is a World History teacher at Carroll County High School. He is an active volunteer for the Carroll County Historical Society and is repairing the J. Sidna Allen House in Fancy Gap, Virginia. They also discuss his career teaching, his time as a student, his time working in England at the University of Nottingham, and other 
