--- a/episodes/23-deborah-renie-gates-democratic-state-senate-candidate-broadband-education-agriculture-speech-therapy-healthcare-platform.mdx
+++ b/episodes/23-deborah-renie-gates-democratic-state-senate-candidate-broadband-education-agriculture-speech-therapy-healthcare-platform.mdx
@@ -9,6 +9,7 @@ categories:
 speakers:
 - deborah-renie-gates
 - ethan-carter-edwards
+- jeffrey-luke-watson
 ---
 
 In this episode, Ethan and Luke interview Deborah "Renie" Gates. Renie is the Democratic State Senate candidate for District 7. They also interviewed her mom a few weeks ago. She and her mom are running together as a mother-daughter campaign, the first mother-daughter political pair in the country's history. They are based in Floyd, Virginia and have been located in this area for the past 40+ years. They discuss Speech Therapy, Agriculture, Healthcare, Broadband, and other important but difficult topics.
