--- a/episodes/25-event-fiddlers-convention-kazim-shriners-moose-lodge-gideons-international-music-history-appalachia.mdx
+++ b/episodes/25-event-fiddlers-convention-kazim-shriners-moose-lodge-gideons-international-music-history-appalachia.mdx
@@ -12,6 +12,7 @@ categories:
 - shriners
 speakers:
 - ethan-carter-edwards
+- jeffrey-luke-watson
 ---
 
 In this episode, Ethan and Luke travel to the Fiddler's Convention in Galax, Virginia. This episode features interviews with folk from the Kazim Shriners, Moose Lodge, and Gideons International discussing what they do, history, music, culture, and tradition. This is a great episode to learn more about the Fiddler's Convention and the organizations that help make it run every year.
