--- a/episodes/26-book-talk-of-mice-and-men-by-john-steinbeck.mdx
+++ b/episodes/26-book-talk-of-mice-and-men-by-john-steinbeck.mdx
@@ -7,6 +7,7 @@ categories:
 - reading
 speakers:
 - ethan-carter-edwards
+- jeffrey-luke-watson
 ---
 
 In this episode Ethan and Luke discuss Of Mice and Men by John Steinbeck. It is a classic that many have heard of but have not actually read. It is a small and digestible book, but it is nevertheless very impactful and thought provoking. This is a great book for anyone looking for a shorter but very intense and pensive read.
