--- a/episodes/27-us-congressman-morgan-griffith-law-school-politics-family-coal-energy-insurance-advice.mdx
+++ b/episodes/27-us-congressman-morgan-griffith-law-school-politics-family-coal-energy-insurance-advice.mdx
@@ -13,6 +13,7 @@ categories:
 speakers:
 - congressman-morgan-griffith
 - ethan-carter-edwards
+- jeffrey-luke-watson
 ---
 
 In this episode, Ethan and Luke interview Congressman Morgan Griffith.
