--- a/episodes/28-aunt-jill-england-ww2-germany-pows-america-military-appalachia-farming-holocaust-911.mdx
+++ b/episodes/28-aunt-jill-england-ww2-germany-pows-america-military-appalachia-farming-holocaust-911.mdx
@@ -10,6 +10,7 @@ categories:
 speakers:
 - aunt-jill
 - ethan-carter-edwards
+- jeffrey-luke-watson
 ---
 
 In this episode Ethan and Luke interview Aunt Jill. Normally, Ethan lists out the full name of our guests in the title of the episode but Mrs. Jill has asked to remain anonymous. Mrs. Jill is Luke's aunt. Mrs. Jill lived in England during World War II and later moved to the United States with her husband. During the episode, she discusses Germany, the involvement of The United States in the War, her husband's role, the Army, the Holocaust, and other related but unique aspects. She also talks about 9/11 and her experience being on a plane during the attack. This is a very interesting listen and was also very special for Luke. 
