--- a/episodes/3-kenzie-marshall-cptcnacoach-running-jrotc-bluefield-coaches-advice-faith.mdx
+++ b/episodes/3-kenzie-marshall-cptcnacoach-running-jrotc-bluefield-coaches-advice-faith.mdx
@@ -11,6 +11,7 @@ categories:
 speakers:
 - kenzie-marshall
 - ethan-carter-edwards
+- jeffrey-luke-watson
 ---
 
 In this interview, Jeffrey (Luke) and Ethan interview Coach Kenzie Marshall, a CPT/CNA that works at the Carroll Wellness Center. They ask her about her time at Carroll County High School running under two excellent coaches. At the end, they ask her if she has any advice for younger people and what the meaning of all this is.
