--- a/episodes/32-curt-sumner-engineering-drafting-hard-work-history-schooling-professionalism-cte.mdx
+++ b/episodes/32-curt-sumner-engineering-drafting-hard-work-history-schooling-professionalism-cte.mdx
@@ -11,6 +11,7 @@ categories:
 speakers:
 - curt-sumner
 - ethan-carter-edwards
+- jeffrey-luke-watson
 ---
 
 In this episode, Ethan and Luke interview Mr. Curt Sumner. Mr. Sumner is the Engineering teacher at Carroll County High School. He has years of experience in the Drafting, Engineering, and Designs fields. They discuss his journey from working in a factory to returning to college, working as a teacher, and lessons that he has learned from education. They also briefly discuss the impact of COVID, music, and advice for younger generations. They also go into the impact that he has had on students as an educator, and that students have had on him. This was an illuminating interview.
