--- a/episodes/38-election-recap-clerks-race-campaigns-polls-results-dinners-experiences.mdx
+++ b/episodes/38-election-recap-clerks-race-campaigns-polls-results-dinners-experiences.mdx
@@ -9,6 +9,7 @@ categories:
 - reading
 speakers:
 - ethan-carter-edwards
+- jeffrey-luke-watson
 ---
 
 This episode is unique. Instead of their usual book talk or interview, Ethan and Luke discuss a recent, local event that they both had the opportunity to participate in: Election Day. 
