--- a/episodes/51-dwayne-yancey-founder-of-the-cardinal-news-the-roanoke-times-farming-swva-jmu-journalism.mdx
+++ b/episodes/51-dwayne-yancey-founder-of-the-cardinal-news-the-roanoke-times-farming-swva-jmu-journalism.mdx
@@ -12,6 +12,7 @@ categories:
 speakers:
 - dwayne-yancey
 - ethan-carter-edwards
+- jeffrey-luke-watson
 ---
 
 In this episode, Ethan and Luke interview Editor and Founder of The Cardinal News, Mr. Dwayne Yancey. The Cardinal News is a digital news service that runs on a 100% donation backed business model, dedicated to providing free news to the commonwealth through zero paywalls. He was also an editor at The Roanoke Times, working with the company for 39 years. In this episode he recounts the early tales of his childhood, his time at James Madison University, and his introduction to journalism.
