--- a/episodes/54-ben-tickle-faith-education-family-teaching-coaching-sports.mdx
+++ b/episodes/54-ben-tickle-faith-education-family-teaching-coaching-sports.mdx
@@ -12,6 +12,7 @@ categories:
 speakers:
 - ben-tickle
 - ethan-carter-edwards
+- jeffrey-luke-watson
 ---
 
 In this episode, Ethan and Luke interview Mr. Ben Tickle, a Christian, a professor at Liberty University, and coach and educator at Carroll County High School. During the interview, they discuss his earliest memories, his educational journey, and his jobs as a teacher, administrator, and coach. Throughout the episode, Mr. Tickle gives insights into his Christian faith, encouraging people to reach out to him to ask questions and learn more. This was a wonderful episode. 
