--- a/episodes/57-talking-trash-with-gerald-goad-and-beth-oravec-carroll-county-litter-task-force.mdx
+++ b/episodes/57-talking-trash-with-gerald-goad-and-beth-oravec-carroll-county-litter-task-force.mdx
@@ -12,6 +12,7 @@ speakers:
 - beth-oravec
 - clerk-gerald-r-goad
 - ethan-carter-edwards
+- jeffrey-luke-watson
 ---
 
 In this episode, Ethan and Luke sit down with Clerk Gerald Goad and Ms. Beth Oravec to discuss the Carroll County Litter Task Force, a committee dedicated to spreading awareness about the current litter problem faced by the county. During the discussion, both guests gave their background and perspective on the current problem. They offer solutions, identify areas of improvement, and describe plans that are currently in motion.  
