--- a/episodes/61-recovery-fitness-with-judge-geisler-judge-harrell-and-walter-midkiff-addiction-recovery-court-fitness.mdx
+++ b/episodes/61-recovery-fitness-with-judge-geisler-judge-harrell-and-walter-midkiff-addiction-recovery-court-fitness.mdx
@@ -16,6 +16,7 @@ speakers:
 - judge-brett-l-geisler
 - judge-hugh-lee-harrell
 - ethan-carter-edwards
+- jeffrey-luke-watson
 ---
 
 In this episode, Ethan and Luke interview Judge Geisler, Judge Harrell, and Walter Midkiff about RecoveryFitness.org and the Addiction Recovery Court. Ethan and Luke were recently invited by Judge Geisler to participate in the weekly Thursday night Recovery Fitness workouts. After working out, they sat down with the trio and discussed their plan to break the typical incarceration and probation cycle. They realized that it was inefficient and costly. In 2022, they decided to begin incorporating a fitness requirement through RecoveryFitness.org, a local non-profit, into an already existing program attempting to treat offenders. They discuss this programs origins, logistics, and availability during the interview.
