--- a/episodes/68-patrick-sharp-coaching-basketball-running-biking-teaching-faith.mdx
+++ b/episodes/68-patrick-sharp-coaching-basketball-running-biking-teaching-faith.mdx
@@ -11,6 +11,7 @@ categories:
 speakers:
 - coach-patrick-sharp
 - ethan-carter-edwards
+- jeffrey-luke-watson
 ---
 
 In this episode, Ethan and Luke interview Coach Patrick Sharp, former teacher and coach at Carroll County High School. They cover his time playing college basketball, and his decision to get a job as a teacher. He discusses his time as a Basketball, Track, and Cross Country coach and then explains his coaching methodology. They then discuss his involvement in church, the Bible, and his faith. This was a very special episode for both Ethan and Luke as they were both coached by him for Cross Country in middle school. 
