--- a/episodes/71-luke-watson-carroll-county-history-government-running-reading-education-hard-work-love.mdx
+++ b/episodes/71-luke-watson-carroll-county-history-government-running-reading-education-hard-work-love.mdx
@@ -12,6 +12,7 @@ categories:
 - running
 speakers:
 - ethan-carter-edwards
+- jeffrey-luke-watson
 ---
 
 In this episode, Ethan interviews Mr. Luke Watson, his close friend and co-host of The Ridge Podcast. They discuss Luke's early upbringing, love for Carroll County and its schools, and then discuss his future plans. They discuss the impact COVID had on his education, how running has changed his life, and his love for books, English, and History. Later in the episode, Luke discusses the importance of family and love in his life. They end the episode reflecting on the podcast, the duo's friendship, and Luke's message to future generations. This episode was incredibly special for both hosts.
