--- a/episodes/72-farewell.mdx
+++ b/episodes/72-farewell.mdx
@@ -5,6 +5,7 @@ categories:
 - farewell
 speakers:
 - ethan-carter-edwards
+- jeffrey-luke-watson
 ---
 
 As Luke leaves for college, the hosts have decided that now is a good time to pause the podcast. They are very thankful for the opportunity to interview countless wonderful people and for the amazing support from the community. They would like to extend a special thanks to Dr. Ronnie G. Collins for his support from day one. He has always helped promote us, connected us to guests, and gave us advice. Ethan would also like to thank his parents for lending their office space, giving him advice, and paying for the associated electricity and internet that his servers utilize. The Ridge Podcast has been an amazing experience for Ethan and Luke.
