--- a/episodes/8-delegate-wren-williams-politics-patrick-county-republican-law-school-lawyer-faith-husband-technology.mdx
+++ b/episodes/8-delegate-wren-williams-politics-patrick-county-republican-law-school-lawyer-faith-husband-technology.mdx
@@ -12,6 +12,7 @@ categories:
 speakers:
 - delegate-wren-williams
 - ethan-carter-edwards
+- jeffrey-luke-watson
 ---
 
 In this episode, Jeffrey (Luke) Watson and Ethan Edwards interview Delegate Wren Williams (VA, HD-9). They ask about how he got into politics just a few years ago, his time and accomplishments serving as a state representative in Virginia, and his personal life as a new father, husband, and owner of a small business, a local law firm.
