--- a/episodes/9-nathan-jones-athletic-trainer-uva-ferrum-cchs-books-sports-running-advice.mdx
+++ b/episodes/9-nathan-jones-athletic-trainer-uva-ferrum-cchs-books-sports-running-advice.mdx
@@ -11,6 +11,7 @@ categories:
 speakers:
 - nathan-jones
 - ethan-carter-edwards
+- jeffrey-luke-watson
 ---
 
 In this interview, Ethan and Luke interview Nathan Jones, the school Athletic Trainer, at a CCHS Cavalier Baseball game! Many times during the episode the interview is interrupted for Mr. Jones to tend to an athlete or to participate in the Baseball team's antics. Ethan and Luke agreed to leave these parts in to demonstrate what Mr. Jones job is like and to extend that experience to the listener. He also teaches the popular Sports Medicine class. They discuss his time in high school playing sports and his academics, his time at the University of Virginia (UVA) where he majored in Kinesiology and then continued to get his Masters in Athletic Training. Jones remarks on his clinical experience and working with different sports teams at UVA. After that, he was an Athletic Trainer at Ferrum College and then came to CCHS. At the end of the interview they discuss books, advice for younger generations and for youth wanting to pursue Athletic Training, and the meaning of life.
