--- a/episodes/13-ronnie-dean-horton-virginia-state-police-swat-law-enforcement-academies-dispatcher-sro-jail-firefighter-sheriff-election.mdx
+++ b/episodes/13-ronnie-dean-horton-virginia-state-police-swat-law-enforcement-academies-dispatcher-sro-jail-firefighter-sheriff-election.mdx
@@ -13,6 +13,7 @@ categories:
 speakers:
 - ronnie-dean-horton
 - ethan-carter-edwards
+- jeffrey-luke-watson
 ---
 
 In this episode, Ethan and Luke interview Ronnie Dean Horton. They ask him about how his dreams to be a Virginia State Trooper. He talks about his career in the Sheriff's Office, his time at the jail, and eventually his time at the police academy to become a State Trooper. He remarks about his time in the academy, being promoted to Sergeant, and experiences on the SWAT/Tactical team. Later in the episode, he discusses working as a School Resource Officer and how it has changed how he parents. At the end he explains why he has decided to run for Carroll County Sheriff and what he would like to do in office. 
