--- a/episodes/29-tech-sergeant-nicholas-mcgaughey-air-force-reserve-boot-camp-tech-school-electrician-bonuses-gi-bill-college-recruiting.mdx
+++ b/episodes/29-tech-sergeant-nicholas-mcgaughey-air-force-reserve-boot-camp-tech-school-electrician-bonuses-gi-bill-college-recruiting.mdx
@@ -11,6 +11,7 @@ categories:
 speakers:
 - tech-sergeant-nicholas-mcgaughey
 - ethan-carter-edwards
+- jeffrey-luke-watson
 ---
 
 In this Episode Ethan and Luke interview Technical Sergeant Nicholas McGaughey. Sergeant McGaughey is an Air Force Reserves recruiter currently stationed in Richmond, Virginia. They discuss the enlistment process, boot camp, tech school and different jobs available in the Air Force, how the Air Force can help people get through college, serving part time through the Reserves or Air National Guard, and other related topics. This is an excellent episode for anyone interested in learning more about the Air Force, Reserves, or military service. 
