--- a/episodes/30-william-bill-barr-traveling-kylene-barker-italy-germany-sap-nazi-germany-england-switzerland-denmark-india-south-america.mdx
+++ b/episodes/30-william-bill-barr-traveling-kylene-barker-italy-germany-sap-nazi-germany-england-switzerland-denmark-india-south-america.mdx
@@ -16,6 +16,7 @@ categories:
 speakers:
 - william-bill-barr
 - ethan-carter-edwards
+- jeffrey-luke-watson
 ---
 
 In this episode Ethan and Luke interview William (Bill) Barr. Mr. Barr is a Carroll County native who currently resides in Florida. They discuss the countries mentioned in the title, Bill's education, his business and career, other travels, experiences, and lessons learned. He was also a student at CCHS when Kylene Barker won Mrs. America and discusses the local reaction. They hope to interview Mr. Barr again in the coming weeks to further discuss his stories.
