--- a/episodes/33-book-talk-animal-farm-by-george-orwell.mdx
+++ b/episodes/33-book-talk-animal-farm-by-george-orwell.mdx
@@ -8,6 +8,7 @@ categories:
 - reading
 speakers:
 - ethan-carter-edwards
+- jeffrey-luke-watson
 ---
 
 In this episode, Ethan and Luke discuss Animal Farm by George Orwell. They compare it to other Orwellian literature, muse on the political impacts the book has had, and recount the story. Later on in the episode they discuss biographies, author's motivations to write books, and all the wrong reasons that people write books, as well as some of the right ones.
