--- a/episodes/35-book-talk-bobok-by-fyodor-dostoevsky.mdx
+++ b/episodes/35-book-talk-bobok-by-fyodor-dostoevsky.mdx
@@ -7,6 +7,7 @@ categories:
 - reading
 speakers:
 - ethan-carter-edwards
+- jeffrey-luke-watson
 ---
 
 In this episode, Ethan and Luke discuss Bobok by Fyodor Dostoevsky. They go through its plot, some moral lessons contained within the book, and briefly discuss Mr. Dostoevsky's personal life and how it may have influenced his writing style. Near they end they discuss what they each are currently reading and different translations of this work. 
