--- a/episodes/39-treasurer-bonita-m-williams-early-life-taxes-campaigning-elections-misconceptions.mdx
+++ b/episodes/39-treasurer-bonita-m-williams-early-life-taxes-campaigning-elections-misconceptions.mdx
@@ -9,6 +9,7 @@ categories:
 speakers:
 - treasurer-bonita-m-williams
 - ethan-carter-edwards
+- jeffrey-luke-watson
 ---
 
 In this episode, Ethan and Luke interview Mrs. Bonita M. Williams, the Treasurer of Carroll County, Virginia. They discuss her early life, the collection of taxes, her experiences campaigning and the impact of politics on personal life, her strong success on the ballot, and finally they debunk some misconceptions that many have about the Treasurer's office and its role.
