--- a/episodes/40-book-talk-there-will-come-soft-rains-by-ray-bradbury.mdx
+++ b/episodes/40-book-talk-there-will-come-soft-rains-by-ray-bradbury.mdx
@@ -8,6 +8,7 @@ categories:
 - reading
 speakers:
 - ethan-carter-edwards
+- jeffrey-luke-watson
 ---
 
 In this episode, Ethan and Luke discuss the work There Will Come Soft Rains by Ray Bradbury. They recount the story, discuss the hidden meaning within the story, and Ethan reveals the special meaning that this story has for him. They then discuss other works by Ray Bradbury and discuss what they will read next.
