--- a/episodes/41-book-talk-anthem-by-ayn-rand.mdx
+++ b/episodes/41-book-talk-anthem-by-ayn-rand.mdx
@@ -7,6 +7,7 @@ categories:
 - reading
 speakers:
 - ethan-carter-edwards
+- jeffrey-luke-watson
 ---
 
 In this episode, Ethan and Luke review the book Anthem by Ayn Rand. They recount the story, add linguistic and philosophical thoughts along the way, discuss the stark similarities between Anthem and other works of literature like 1984. 
