--- a/episodes/42-kevin-silvey-ultrarunning-art4healing-vitality-mental-health-self-love.mdx
+++ b/episodes/42-kevin-silvey-ultrarunning-art4healing-vitality-mental-health-self-love.mdx
@@ -12,6 +12,7 @@ categories:
 speakers:
 - kevin-silvey
 - ethan-carter-edwards
+- jeffrey-luke-watson
 ---
 
 In this episode, Ethan and Luke interview Mr. Kevin Silvey. To start, he gives a deep background into his upbringing and discusses challenges he faced. They then dive into his start into running, followed by his change in eating habits. Then they talk about his passion for art through his company Art4Healing, including his opportunities to create murals in hospitals. After, they discuss running in more depth and mental health. Finally, they discuss relationship advice and why mental health and self-love is vital. Throughout the episode he relates his story to the book he is writing, Pitfalls or Footholds.
