--- a/episodes/43-book-talk-a-christmas-carol-by-charles-dickens.mdx
+++ b/episodes/43-book-talk-a-christmas-carol-by-charles-dickens.mdx
@@ -7,6 +7,7 @@ categories:
 - reading
 speakers:
 - ethan-carter-edwards
+- jeffrey-luke-watson
 ---
 
 In this episode, Ethan and Luke discuss A Christmas Carol by Charles Dickens. The book is a heartwarming story about the gift of giving, change, and the power of Christmas. They discuss the events in the book, relating it to recent events and taking away valuable lessons. 
