--- a/episodes/47-book-talk-narrative-of-the-life-of-frederick-douglass.mdx
+++ b/episodes/47-book-talk-narrative-of-the-life-of-frederick-douglass.mdx
@@ -7,6 +7,7 @@ categories:
 - reading
 speakers:
 - ethan-carter-edwards
+- jeffrey-luke-watson
 ---
 
 In this episode, Ethan and Luke discuss the book Narrative of the Life of Frederick Douglass. They discuss this books role in exposing the horrors of slavery, the life of Mr. Frederick Douglass, and his journey from living on a plantation to escaping to the free states.
