--- a/episodes/58-frank-levering-hollywood-cherry-farming-harvard-football-writing-movies-plays-thunder-in-the-hills.mdx
+++ b/episodes/58-frank-levering-hollywood-cherry-farming-harvard-football-writing-movies-plays-thunder-in-the-hills.mdx
@@ -10,6 +10,7 @@ categories:
 speakers:
 - frank-levering
 - ethan-carter-edwards
+- jeffrey-luke-watson
 ---
 
 In this episode, Ethan and Luke interview Mr. Frank Levering, author, screenwriter, and play director. They discuss his early life, his time playing football at Wesleyan University, his time studying theology at Harvard Divinity School, and his career in Hollywood. Throughout the episode, they discuss influential writers, directors, and works of media. Near the end, they discuss the courthouse shooting play Thunder in the Hills. 
