--- a/episodes/60-casey-burcham-baseball-coaching-eh-education-government-hard-work-success-lessons.mdx
+++ b/episodes/60-casey-burcham-baseball-coaching-eh-education-government-hard-work-success-lessons.mdx
@@ -12,6 +12,7 @@ categories:
 speakers:
 - casey-burcham
 - ethan-carter-edwards
+- jeffrey-luke-watson
 ---
 
 In this episode, Ethan and Luke interview Casey Burcham, coach and educator at Carroll County High School. He delineates his early life, education and sports, time at Radford University, and then his decision to transfer to Emory and Henry College where he played Football and Baseball. He recalls his decision to major in History, become a teacher, and coach the game that he loves. After that, he discusses his first jobs, lessons he learned, and his move to Carroll County High School. He depicts his coaching strategy, techniques, and mindset. He emphasizes that improving each day should always be the goal. 
