--- a/episodes/64-ethan-dalton-cchs-running-emory-and-henry-education-pre-law-friendships-advice.mdx
+++ b/episodes/64-ethan-dalton-cchs-running-emory-and-henry-education-pre-law-friendships-advice.mdx
@@ -13,6 +13,7 @@ categories:
 speakers:
 - ethan-dalton
 - ethan-carter-edwards
+- jeffrey-luke-watson
 ---
 
 In this episode, Ethan Edwards and Luke interview Ethan Dalton, one of their closest friends. They reminisce on their meeting each other, their time running Cross Country and Track together, and funny moments on the teams. Ethan Dalton discusses his goals to become a lawyer, his time at Emory and Henry College, and his experiences being a collegiate athlete. This was a very special episode for Ethan Edwards and Luke.
