add luke to remaining episodes
messy

Signed-off-by: Ethan Carter Edwards <ethan@ethancedwards.com>

--- a/episodes/86-dwayne-harmon-faith-family-life-haiti-mission-trip-hunting-fishing-harmon-luck-service.mdx
+++ b/episodes/86-dwayne-harmon-faith-family-life-haiti-mission-trip-hunting-fishing-harmon-luck-service.mdx
@@ -8,6 +8,7 @@ categories:
 speakers:
 - dwayne-harmon
 - ethan-carter-edwards
+- jeffrey-luke-watson
 ---
 
 In this episode, Ethan and Luke interview Mr. Dwayne Harmon. He recounts his early life growing up in Carroll County, his spiritual and faith journey, some excerpts from his mission trip to Haiti, and more. Later in the episode, he and Luke reminisce on some stories from hunting and fishing, Mr. Harmon explains the infamous "Harmon Luck" or lack thereof. Finally, he talks about the value of helping others when one is able to and gives some life advice.
