--- a/episodes/87-katie-mattox-21st-century-packhorse-library-ems-appalachia.mdx
+++ b/episodes/87-katie-mattox-21st-century-packhorse-library-ems-appalachia.mdx
@@ -12,6 +12,7 @@ categories:
 speakers:
 - katie-mattox
 - ethan-carter-edwards
+- jeffrey-luke-watson
 ---
 
 In this episode, Ethan and Luke interview Mrs. Katie Mattox, first-responder and head of the Southwest Virginia branch of the 21st Century Packhorse Library. They discuss her introduction to the medical field, some lessons she has learned during her career, and the importance of having her family work with her. Finally, they discuss the 21st Century Packhorse Library, its history, goals, mission, ways to support their cause, and why Appalachia is such a special place.
