--- a/episodes/89-greg-watson-secret-service-counterfeit-money-presidents-law-enforcement-north-korea-training.mdx
+++ b/episodes/89-greg-watson-secret-service-counterfeit-money-presidents-law-enforcement-north-korea-training.mdx
@@ -12,6 +12,7 @@ categories:
 speakers:
 - greg-watson
 - ethan-carter-edwards
+- jeffrey-luke-watson
 ---
 
 In this episode, Ethan and Luke interview Mr. Greg Watson, former U.S. Secret Service agent and Luke's relative. During the conversation, they discuss everything from counterfeit money production, the events of 9/11, protection details for U.S. Presidents, his trips to foreign countries like North Korea, to the testifying and clearance process, as well as a whole lot more. He also briefly mentioned his previous experience in the United States Postal Service, Galax Police Department, and experience trying to join the Virginia State Police. As they wrap up, Mr. Watson discusses retirement from the U.S.S.S., his book idea, and lessons that newer agents need to learn that are not taught in training.
