--- a/episodes/92-dave-white-christ-chapel-ministry-life-lessons-parenting-love-discipleship-peace.mdx
+++ b/episodes/92-dave-white-christ-chapel-ministry-life-lessons-parenting-love-discipleship-peace.mdx
@@ -8,6 +8,7 @@ categories:
 speakers:
 - dave-white
 - ethan-carter-edwards
+- jeffrey-luke-watson
 ---
 
 In this episode, Ethan and Luke interview Mr. Dave White, husband, father, and Pastor at Christ Chapel in Galax, Virginia. They discuss his early life and upbringing, his faith life, his wife's introduction to ministry and her journey, and his eventual entrance into the clergy. Throughout the episode, he discusses the lessons he has learned, his life as a father and husband, and different jobs he has worked throughout his life. At the end of the episode, he explains Christ Chapel's mission and invites everyone to learn more about the gospel and visit the church.
