--- a/episodes/93-judge-brett-l-geisler-virginia-tech-law-school-family-education-law-judgeship-experience-lifestyle.mdx
+++ b/episodes/93-judge-brett-l-geisler-virginia-tech-law-school-family-education-law-judgeship-experience-lifestyle.mdx
@@ -13,6 +13,7 @@ categories:
 speakers:
 - judge-brett-l-geisler
 - ethan-carter-edwards
+- jeffrey-luke-watson
 ---
 
 In this episode, Ethan and Luke interview Judge Brett L. Geisler. They discuss his educational background as a Political Science student at Virginia Tech, law student at the University of Richmond, and practicing lawyer with his father in his hometown of Hillsville, Virginia. They reflect on Judge Geisler's first days in court, advice from his father, and the rigorous law school curriculum. Then, they touch on his diverse legal experience as an attorney in a small town, his time as county attorney, and his campaigns as a candidate for Commonwealth Attorney and the House of Delegates. Finally, they reflect on how his experience as a teacher and a judge has impacted his fatherhood and community involvement. This is an excellent episode for those interested in the legal field.
