--- a/episodes/94-brett-sexton-music-hard-work-fitness-martial-arts-health-education-technology-culture-faith.mdx
+++ b/episodes/94-brett-sexton-music-hard-work-fitness-martial-arts-health-education-technology-culture-faith.mdx
@@ -9,6 +9,7 @@ categories:
 speakers:
 - brett-sexton
 - ethan-carter-edwards
+- jeffrey-luke-watson
 ---
 
 In this episode, Ethan and Luke interview Mr. Brett Sexton, musician, Christian, and Galax School Board member. Throughout the episode, they discuss his passion for music and early career in music production, the role of hard work and discipline curated by fitness and the martial arts, and the importance of nutrition and sleep on fitness. They go on to discuss education, including the role of Artificial Intelligence and cell phones in schools, and observations of culture and societal values. Some topics include shoes, the UFC and mixed martial arts, watches, fitness influencers, podcasting, advertising, and more. Finally, Mr. Sexton discusses the importance of his faith in his and his family's life.
