--- a/episodes/97-mayor-greg-crowder-navy-auto-sells-business-nascar-printing-real-estate-mayor-politics-family.mdx
+++ b/episodes/97-mayor-greg-crowder-navy-auto-sells-business-nascar-printing-real-estate-mayor-politics-family.mdx
@@ -14,6 +14,7 @@ categories:
 speakers:
 - mayor-greg-crowder
 - ethan-carter-edwards
+- jeffrey-luke-watson
 ---
 
 In this episode, Ethan and Luke interview Hillsville Mayor Greg Crowder. They discuss his time in the Navy as a Machinist Mate, his start in business through auto sales, and then the roller-coaster of his NASCAR merchandise business. After that, he discusses real estate, his printing business, his gas stations, and the impact the Great Recession had on his businesses. From there, he details his journey into politics sparked by a proposed cigarette tax, his time and the work he has done as Mayor of Hillsville, and some of the projects and events that he, the Town Council, and the Friends of Hillsville focus on. Finally, he discusses the importance of family and faith.
