--- a/episodes/85-vesta-mcgrady-great-depression-world-wars-jfk-history-farming-books-advice.mdx
+++ b/episodes/85-vesta-mcgrady-great-depression-world-wars-jfk-history-farming-books-advice.mdx
@@ -9,6 +9,7 @@ categories:
 speakers:
 - vesta-mcgrady
 - ethan-carter-edwards
+- jeffrey-luke-watson
 ---
 
 In this episode, Ethan and Luke interview Mrs. Vesta McGrady, Luke's grandmother. She recounts her early childhood during the great depression, her work on the family farm, her early education and church life, and more. Later, they discuss how she met her late husband, his time in the war, and her career in nursing. They end with some heart-warming anecdotes, culture, discussions on life, and advice.
