--- a/episodes/101-dr-carolyn-ward-blue-ridge-parkway-foundation-forestry-appalachia-fundraising-culture-tourism.mdx
+++ b/episodes/101-dr-carolyn-ward-blue-ridge-parkway-foundation-forestry-appalachia-fundraising-culture-tourism.mdx
@@ -3,7 +3,7 @@ title: "#101 - Dr. Carolyn Ward: Blue Ridge Parkway Foundation, Forestry, Appala
 date: '2025-11-30T19:50:43+00:00'
 categories:
 - appalachia
-- blueridge
+- blue-ridge
 - interview
 - mountains
 - nature
