--- a/episodes/14-roger-d-brooks-commonwealth-attorney-engineer-nuclear-lawyer-cooperative-ed-law-school-court-processes.mdx
+++ b/episodes/14-roger-d-brooks-commonwealth-attorney-engineer-nuclear-lawyer-cooperative-ed-law-school-court-processes.mdx
@@ -5,11 +5,11 @@ categories:
 - advice
 - attorney
 - books
-- commonwealthattorney
+- commonwealth-attorney
 - election
 - engineering
 - faith
-- interivew
+- interview
 - law
 - reading
 speakers:
