--- a/episodes/29-tech-sergeant-nicholas-mcgaughey-air-force-reserve-boot-camp-tech-school-electrician-bonuses-gi-bill-college-recruiting.mdx
+++ b/episodes/29-tech-sergeant-nicholas-mcgaughey-air-force-reserve-boot-camp-tech-school-electrician-bonuses-gi-bill-college-recruiting.mdx
@@ -3,7 +3,7 @@ title: "#29 - Tech Sergeant Nicholas McGaughey: Air Force Reserve, Boot Camp, Te
 date: '2023-09-13T11:30:00+00:00'
 categories:
 - advice
-- airforce
+- air-force
 - interview
 - military
 - reserves
