--- a/episodes/74-cam-coble-amateur-radio-n4nrv-club-getting-licensed-preparedness-antennas-electronics.mdx
+++ b/episodes/74-cam-coble-amateur-radio-n4nrv-club-getting-licensed-preparedness-antennas-electronics.mdx
@@ -3,7 +3,7 @@ title: "#74 - Cam Coble: Amateur Radio, N4NRV Club, Getting Licensed, Preparedne
 date: '2024-09-04T10:00:00+00:00'
 categories:
 - advice
-- amateurradio
+- amateur-radio
 - electronics
 - interview
 - veteran
