--- a/episodes/75-cary-simms-rotary-international-friends-of-the-blue-ridge-community-service-culture-faith.mdx
+++ b/episodes/75-cary-simms-rotary-international-friends-of-the-blue-ridge-community-service-culture-faith.mdx
@@ -2,7 +2,7 @@
 title: "#75 - Cary Simms: Rotary International, Friends of the Blue Ridge, Community Service, Culture, Faith"
 date: '2024-09-18T10:00:00+00:00'
 categories:
-- communityservice
+- community-service
 - faith
 - interview
 - volunteering
