--- a/episodes/78-kathleen-simms-lyme-disease-ticks-treatment-ilads-research.mdx
+++ b/episodes/78-kathleen-simms-lyme-disease-ticks-treatment-ilads-research.mdx
@@ -3,7 +3,7 @@ title: "#78 - Kathleen Simms: Lyme Disease, Ticks, Treatment, ILADS, Research"
 date: '2024-10-30T10:30:00+00:00'
 categories:
 - advice
-- carrollcounty
+- carroll-county
 - interview
 - reading
 speakers:
