--- a/episodes/81-josh-greer-amateur-radio-community-service-emergency-communications-digital-radio-satellites-antennas.mdx
+++ b/episodes/81-josh-greer-amateur-radio-community-service-emergency-communications-digital-radio-satellites-antennas.mdx
@@ -2,7 +2,7 @@
 title: "#81 - Josh Greer: Amateur Radio, Community Service, Emergency Communications, Digital Radio, Satellites, Antennas"
 date: '2024-12-11T10:00:00+00:00'
 categories:
-- amateurradio
+- amateur-radio
 - interview
 - technology
 speakers:
