--- a/episodes/90-steve-pottorff-cooperative-extension-agriculture-beekeeping-4-h-homemakers-association-ffa-bird-flu-rotary.mdx
+++ b/episodes/90-steve-pottorff-cooperative-extension-agriculture-beekeeping-4-h-homemakers-association-ffa-bird-flu-rotary.mdx
@@ -13,7 +13,7 @@ speakers:
 - ethan-carter-edwards
 ---
 
-In this episode, Ethan interviews Mr. Steve Pottorff, Carroll County Cooperative Extension Agent. They discuss the history of Cooperative Extension, Land Grant Universities, 4-H, Mr. Pottorff's personal connection to the Homemakers Assocations, and more. Later in the episode they discuss various agricultural topics like the Bird Flu, Beekeeping, and Cicadas. Near the end of the episode, Mr. Pottorff gives some advice and discusses the meaning of Rotary in his life. 
+In this episode, Ethan interviews Mr. Steve Pottorff, Carroll County Cooperative Extension Agent. They discuss the history of Cooperative Extension, Land Grant Universities, 4-H, Mr. Pottorff's personal connection to the Homemakers Associations, and more. Later in the episode they discuss various agricultural topics like the Bird Flu, Beekeeping, and Cicadas. Near the end of the episode, Mr. Pottorff gives some advice and discusses the meaning of Rotary in his life.
 
 
 
