--- a/episodes/98-recovery-pastor-kevin-harrod-recovery-united-addiction-faith-healing-family-peer-support.mdx
+++ b/episodes/98-recovery-pastor-kevin-harrod-recovery-united-addiction-faith-healing-family-peer-support.mdx
@@ -6,7 +6,7 @@ categories:
 - interview
 - reading
 - recovery
-- substanceuse
+- substance-use
 speakers:
 - pastor-kevin-harrod
 - ethan-carter-edwards
