--- a/episodes/20-paul-tilley-trucking-business-new-river-trail-outfitters-running-hiking-camping-born-to-run-ultramarathons-training.mdx
+++ b/episodes/20-paul-tilley-trucking-business-new-river-trail-outfitters-running-hiking-camping-born-to-run-ultramarathons-training.mdx
@@ -3,7 +3,7 @@ title: "#20 - Paul Tilley: Trucking, Business, New River Trail Outfitters, Runni
 date: '2023-07-12T11:30:00+00:00'
 categories:
 - books
-- froggymountain
+- froggy-mountain
 - marathon
 - podcast
 - reading
@@ -15,7 +15,7 @@ speakers:
 - jeffrey-luke-watson
 ---
 
-In this episode, Ethan and Luke interview Paul Tilley. Paul is an ultramarathoner and is an owner of <a href="http://nrtoutfitters.com/" rel="noreferrer noopener" target="_blank">New River Trail Outfitters</a> in Galax, Virginia. They discuss his time as a trucker, his business and the services that they provide, and his introduction into running, camping, and hiking.  They briefly discuss the book Born to Run and how it inspired him and his brother to start running. Later on in the episode, they talk about ultramarathons, training, nutrition, and how Paul trains for his races. Fun fact, Paul's pickmeup during a race is ice cold milk! 
+In this episode, Ethan and Luke interview Paul Tilley. Paul is an ultramarathoner and is an owner of <a href="http://nrtoutfitters.com/" rel="noreferrer noopener" target="_blank">New River Trail Outfitters</a> in Galax, Virginia. They discuss his time as a trucker, his business and the services that they provide, and his introduction into running, camping, and hiking.  They briefly discuss the book Born to Run and how it inspired him and his brother to start running. Later on in the episode, they talk about ultramarathons, training, nutrition, and how Paul trains for his races. Fun fact, Paul's pick-me-up during a race is ice cold milk!
 
 
 
