--- a/episodes/21-mark-harmon-sidna-allen-house-historical-society-teaching-history-england-museums-carroll-county.mdx
+++ b/episodes/21-mark-harmon-sidna-allen-house-historical-society-teaching-history-england-museums-carroll-county.mdx
@@ -4,7 +4,7 @@ date: '2023-07-20T11:30:00+00:00'
 categories:
 - advice
 - books
-- carrollcounty
+- carroll-county
 - history
 - interview
 - reading
