--- a/episodes/5-book-talk-fahrenheit-451-and-night.mdx
+++ b/episodes/5-book-talk-fahrenheit-451-and-night.mdx
@@ -3,7 +3,7 @@ title: "#5 - Book talk: Fahrenheit 451 and Night"
 date: '2023-03-29T11:30:00+00:00'
 categories:
 - books
-- booktalk
+- book-talk
 - literature
 - reading
 speakers:
